objects/Executive_Client_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Client_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Client Scorecards</relationshipLabel>
        <relationshipName>Executive_Client_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Conversation__c</fullName>
        <label>Date of Conversation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Willingness_to_Renew_with_YBN__c</fullName>
        <description>1 = Not Really
5 = Absolutely</description>
        <label>Willingness to Renew with YBN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YBN_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>YBN Contact Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Executive_Client_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YBN_Exceeding_Client_Expectations__c</fullName>
        <description>1 = Not Really
5 = Absolutely</description>
        <label>YBN Exceeding Client Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YBN_Exceeding_ROI_Expectations__c</fullName>
        <description>1 = Not Really
5 = Absolutely</description>
        <label>YBN Exceeding ROI Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Executive Client Scorecards</relationshipLabel>
        <relationshipName>Executive_Client_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Executive Client Scorecard</label>
    <nameField>
        <label>Executive Client Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Client Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>